Add section discussing possible alternatives

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -60,6 +60,10 @@ We believe VITAL can form the basis of an approach for generating extremely high
 \label{sec:overview}
 \input{overview}
 
+\section{Roads Not Taken}
+\label{sec:altdesign}
+\input{altdesign}
+
 \section{Implementation}
 \label{sec:implementation}
 \input{implementation}
