added some of brendan's pseudo code for fbi

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -8,6 +8,13 @@
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{times}
+%\usepackage{algorithm}
+\usepackage{listings}
+
+\lstset{language=Python,
+        numbers=left, numberstyle=\tiny, stepnumber=2, numbersep=5pt,
+        basicstyle=\ttfamily\footnotesize}
+
 
 %opening
 \title{VITAL: Vulnerability Injection via Taint AnaLysis
