--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -25,7 +25,7 @@
     endorsed by the United States Government.} }
 
 \author{
-\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Tim Leek\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}}
+\IEEEauthorblockN{Brendan Dolan-Gavitt\IEEEauthorrefmark{1}, Patrick Hulin\IEEEauthorrefmark{2}, Tim Leek\IEEEauthorrefmark{2}, Ryan Whelan\IEEEauthorrefmark{2}, Fredrich Ulrich\IEEEauthorrefmark{2}, Various NEU peeple}
 \\
 \small (Authors listed alphabetically) \\
 \\
