--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -5,13 +5,13 @@
 \centering
 \begin{tabular}{c|c|c|c|c|c|c|c|c|c} 
 Name    & Version & lines of C code & N(BBs)     & N(BBu)   & N(DUA)  & N(ATP) & Potential Bugs & \% Tested & Yield \\\hline
-file    & 5.22    & 12927           & 7673061    & 23788    & 675     & 117    & 19695          & 100\%     & 38.7\%  \\
+file    & 5.22    & 12927           & 7679934    & 24086    & 631     & 114    & 17518          & 11.4\%    & 38.7\%  \\
 eog     & 3.4.2   & 22997           &            &          &         &        &                &           & \\ 
-bash    & 4.3     & 98871           & 8122499    & 29088    & 3669    & 604    & 407293         &           & 8.8\% \\
-readelf & 2.25    & 1327513         & 8192354    & 21283    &     &     &          & 0.1\%                  & 50.5 \% \\
-tshark  & 1.8.2   & 2186252         & 470083368  & 225587   & 9853    & 1037   & 1240777        & 0.01\%    & 15.0\% \\
+bash    & 4.3     & 98871           & 8197701    & 28612    & 3832    & 604    & 447645         & 0.45\%    & 9.6\% \\
+readelf & 2.25    & 1327513         & 9681871    & 21640    & 3849    & 266    & 276367         & 0.72\%    & 53.2 \% \\
+tshark  & 1.8.2   & 2186252         & 470083368  & 225587   & 9853    & 1037   & 1240777        & 0.01\%    & 17.7\% \\
 \end{tabular}
-\caption{Injection results for open source programs of various sizes.
+\caption{LAVA Injection results for open source programs of various sizes.
 For each, a single input file was used to perform a taint analysis with PANDA.
 Various program and dynamic trace statistics are reported as well as DUA, attack point (ATP), and yield (fraction of injected bugs that result in a segmentation violation).}
 \label{table:insertion-results}
@@ -120,6 +120,10 @@ The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potent
 \label{fig:rdf-hist}
 \end{figure}
 
+
+\subsection{Vulnerability Discovery Tool Evaluation}
+
+And something needs to go here when we get it from NEU who is doing the eval.
 
 
 
